@@ -31,5 +31,6 @@ XX+UseCMSCompactAtFullCollection	在FULL GC的时候， 对年老代的压缩
 
 # 辅助日志
 -XX:+PrintGC
+-XX:+PrintGCDetails 打印日志
 
 
